recursion.lessons.recursion.sierpinski.Sierpinski.scala.code
def sierpinski(level:Int, length:Double) {
	if (levels!=0) {
		sierpinski(levels-1, length/2);
		droite(60);
		sierpinski(levels-1, length/2);
		droite(60);
		sierpinski(levels-1, length/2);
		
	}
	else {
		avance(length);
		droite(120);
	}
}
